# redis-fsspec-cache

./: LICENSE  NOTES.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
examples/: async_usage.ipynb  docker-compose.redis.yml  file_object.ipynb  playground.ipynb  reference_cache.ipynb  sync_usage.ipynb  xarray_kerchunk_usage.ipynb  xarray_netcdf4_usage.ipynb  xarray_usage.ipynb
examples/redis/: redis.conf
notebooks/: playground.ipynb
redis-block-cache/: cache.py
redis_block_cache/: cache.py  filesystem.py
redis_block_fsspec_cache/: __init__.py  cache.py  filesystem.py
redis_fsspec_cache/: __init__.py  asyncio.py  cache.py  filesystem.py  reference.py
redis_fsspec_cache/asyn/: __init__.py  filesystem.py
redis_fsspec_cache/async/: filesystem.py
redis_fsspec_cache/sync/: __init__.py  cache.py  filesystem.py
