[project]
name = "redis-block-cache"
version = "0.0.1"
authors = [
  { name="Matthew Iannucci", email="mpiannucci@gmail.com" },
]
description = "A prototype redis cache for fsspec"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'fsspec',
]

[project.urls]
Homepage = "https://github.com/mpiannucci/redis-block-cache"
Issues = "https://github.com/mpiannucci/redis-block-cache/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"