[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redis-block-fsspec-cache"
version = "0.0.1"
authors = [
  { name="Matthew Iannucci", email="mpiannucci@gmail.com" },
]
description = "A prototype redis cache for fsspec"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'fsspec',
    'redis',
]

[project.urls]
Homepage = "https://github.com/mpiannucci/redis-fsspec-cache"
Issues = "https://github.com/mpiannucci/redis-fsspec-cache/issues"

[project.entry-points."fsspec.specs"]
rediscache = "redis_fsspec_cache.sync:RedisCachingFileSystem"

[tool.setuptools]
packages = [
    "redis_fsspec_cache",
]